--- a/index.html
+++ b/index.html
@@ -526,50 +526,53 @@
                 <p>KCC건설 소식지</p>
 
                 <div class="row">
-                    <div class="movie">
-                        <div class="play">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/lPec2ERomC4"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                    <div class="row_flex">
+                        <div class="movie">
+                            <div class="play">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/lPec2ERomC4"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
                         </div>
+
+                        <table class="news_table">
+                            <thead>
+                                <tr>
+                                    <th class="nn"><a href="">NEWS</a></th>
+                                    <th class="mm"><a href=""><i class="xi-plus"></i> more</a></th>
+
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td><a href="">내용이 KCC건설 ‘내일을 키워가는 집’ 영상 4,000만뷰 돌파</a></td>
+                                    <th>2022-01-01</th>
+                                </tr>
+
+                                <tr>
+                                    <td><a href="">한국건설경영협회 창립 30주년 기념 토론회 지상중계</a></td>
+                                    <th>2022-01-01</th>
+                                </tr>
+
+                                <tr>
+                                    <td><a href="">한국형 녹색분류체계의 건설기업 파급효과</a></td>
+                                    <th>2022-01-01</th>
+                                </tr>
+
+                                <tr>
+                                    <td><a href="">시차와 미래를 고려한 적정 수준의 SOC 투자</a></td>
+                                    <th>2022-01-01</th>
+                                </tr>
+
+                                <tr>
+                                    <td><a href="">2022년 하반기 건설산업의 주요 이슈와 대응 방향</a></td>
+                                    <th>2022-01-01</th>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-
-                    <table class="news_table">
-                        <thead>
-                            <tr>
-                                <th class="nn">NEWS</th>
-                                <th class="mm"><i class="xi-plus"></i> more</th>
-                            </tr>
-                        </thead>
-
-                        <tbody>
-                            <tr>
-                                <td>내용이 KCC건설 ‘내일을 키워가는 집’ 영상 4,000만뷰 돌파</td>
-                                <th>2022-01-01</th>
-                            </tr>
-
-                            <tr>
-                                <td>한국건설경영협회 창립 30주년 기념 토론회 지상중계</td>
-                                <th>2022-01-01</th>
-                            </tr>
-
-                            <tr>
-                                <td>한국형 녹색분류체계의 건설기업 파급효과</td>
-                                <th>2022-01-01</th>
-                            </tr>
-
-                            <tr>
-                                <td>시차와 미래를 고려한 적정 수준의 SOC 투자</td>
-                                <th>2022-01-01</th>
-                            </tr>
-
-                            <tr>
-                                <td>2022년 하반기 건설산업의 주요 이슈와 대응 방향</td>
-                                <th>2022-01-01</th>
-                            </tr>
-                        </tbody>
-                    </table>
                 </div>
             </section>
 
